2004-11-18  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-11-17  Marcel Telka  <marcel@telka.sk>

	* configure.in (ALL_LINGUAS): Added sk.

2004-11-16  Thomas Wood  <thos@gnome.org>

	* Makefile.am:
	* abstract/gnome-abstract.xml.in.in:
	* branded/gnome-branded.xml.in.in:
	* configure.in:
	* tiles/gnome-tiles.xml.in.in:
	* translucent/gnome-translucent.xml.in.in:

	i18n work

2004-11-06  Thomas Wood  <thos@gnome.org>

	* branded/GNOME-Aqua.jpg: Higher quality version
	* branded/GNOME-Black.jpg: Re-added with 1600x1200 version
	* branded/GNOME-Weirdcolours.jpg: (added)
	* branded/GNOME-Wierdcolours.jpg: (removed)

	Corrected filename spelling mistake
	
	* branded/Makefile.am:
	* branded/gnome-branded.xml.in.in:

	Updated to reflect changes

2004-11-03  Thomas Wood  <thos@gnome.org>

	* abstract/Makefile.am:
	* abstract/gnome-abstract.xml.in.in:
	* branded/Makefile.am:
	* branded/gnome-branded.xml.in.in:
	* configure.in:
	* po/POTFILES.in:
	* po/gnome-backgrounds.pot:
	* tiles/Makefile.am:
	* tiles/gnome-tiles.xml.in.in:
	* translucent/Makefile.am:
	* translucent/gnome-translucent.xml.in.in:

	XML files for gnome-background-properties added from patch by Andrew
	Johnson. Makefiles updated to reflect changes.
	
	* translucent/grids.png: Removed.

2004-11-02  Thomas Wood  <thos@gnome.org>

	* branded/GNOME-Black.jpg:
	* branded/GNOME-Bluewave.jpg:
	
	Removed - No 1600x1200 version available
	
	* branded/GNOME-Redblured.jpg:
	* branded/GNOME-Redblurred.jpg:

	Fixed spelling error
	
	* branded/Makefile.am:
	* translucent/Makefile.am:

	Updated to refelect current content

2004-07-04  Thomas Wood <thos@gnome.org>

	* abstract/*:
	* branded/*:
	* tiles/*:
	* translucent/centric-translucent.png:
	* translucent/seahorse-translucent.svg:
	* translucent/stripes-translucent.png:

	Lots of new backgrounds added

2003-09-26  Jakub Steiner <jimmac@ximian.com>

	* translucent/rects.png: 1024x768 moving rectangles